--- a/index.html
+++ b/index.html
@@ -89,7 +89,14 @@
           <section class="section--center mdl-grid mdl-grid--no-spacing">
             <div class="mdl-cell mdl-cell--12-col">
               <h4>Paragraph that starts it off and is funny</h4>
-              We did stuff here with music
+              While many musicians like to pay homage to where they’re from, rappers do so as if it’s a cardinal rule of their genre. They represent their hometowns constantly, and take part in regional rivalries to assert their hometowns' dominance. While rappers often mention their hometowns by name in their music, they also display their regional identity in more subtle ways. By using slang that’s specific to where they’re from, rappers constantly root their work in the vocabularies of their neighborhoods.
+              <br/><br/>
+              Our project predicts where rappers are from based on their lyric corpus. The project highlights the linguistic diversity of the rap genre, and the regional specificity of rappers’ vocabularies. As rap continues to grow in popularity, this project is proof that rappers continue to represent their hometowns, and to some degree, at least in the lyrical sense, stay true to their roots. 
+              <br/><br/>
+              In order to complete our project, we trained a Linear SVC learner on the lyric corpuses of 300 of the world’s most popular rap artists. Rapper’s lyrics were processed in a <a href='https://en.wikipedia.org/wiki/Bag-of-words_model'>bag-of-words</a> format. We found that rapper’s lyrics can be predictive of where they’re from, and our Linear SVC model achieved XX% accuracy in predicting rapper’s hometowns. The Linear SVC model consistently outperformed FILL IN. 
+              <br/><br/>
+              As we changed the granularity of our target class from region (Northeast, Midwest, etc.) to city (New York City, Los Angeles, etc.) to sub-city (Brooklyn, Queens, Compton, Long Beach, etc.), our model’s accuracy dipped. We found that while lyrics can be extremely predictive of a rapper’s region or metropolitan city, pinning down a rapper's town of origin given their lyric corpus was difficult given the amount of data available. 
+              Show figure of model accuracies.
             </div>
           </section>
           <section class="section--center mdl-grid mdl-grid--no-spacing">
@@ -97,8 +104,11 @@
             <h4>Abstract</h4>
             <h4>Data</h4>
             <h4>Details</h4>
-            <h4>Map</h4>
+            <h4>Where Our Rappers Come From</h4>
             <iframe width="100%" height="520" frameborder="0" src="https://jdk27.carto.com/builder/9a7a4693-aafd-46fb-9091-ac64f6043619/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+            <h4>About Us</h4>
+            This project was made by <a href="mailto:michaelcahana2018@u.northwestern.edu">Michael Cahana</a>, <a href="mailto:joshuaklein2020@u.northwestern.edu">Josh Klein</a>, and <a href="maxinewhitely2020@u.northwestern.edu">Maxine Whitely</a>. 
+            The project was completed in EECS 349: Machine Learning at Northwestern University 
           </div>
           </section>
         </div>
