--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <h4>Where Our Rappers Come From</h4>
             <iframe width="100%" height="520" frameborder="0" src="https://jdk27.carto.com/builder/ba05580b-e21c-49d8-9e3b-9a9f8ff42492/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe> -->
             <h4>About Us</h4>
-            <p>This project was made by <a href="mailto:michaelcahana2018@u.northwestern.edu">Michael Cahana</a>, <a href="mailto:joshuaklein2020@u.northwestern.edu">Josh Klein</a>, and <a href="maxinewhitely2020@u.northwestern.edu">Maxine Whitely</a>. While we all contributed to all aspects of the project, Michael oversaw data scraping and processing, Josh oversaw model training, and Maxine oversaw website building. This project was completed in EECS 349: Machine Learning at Northwestern University. </p>
+            <p>This project was made by <a href="mailto:michaelcahana2018@u.northwestern.edu">Michael Cahana</a>, <a href="mailto:joshuaklein2020@u.northwestern.edu">Josh Klein</a>, and <a href="mailto:maxinewhitely2020@u.northwestern.edu">Maxine Whitely</a>. While we all contributed to all aspects of the project, Michael oversaw data scraping and processing, Josh oversaw model training, and Maxine oversaw website building. Our code can be found on <a href="https://github.com/m-cahana/rapcast">GitHub</a>. This project was completed in EECS 349: Machine Learning at Northwestern University. </p>
           </div>
           </section>
         </div>
