--- a/index.html
+++ b/index.html
@@ -3241,7 +3241,7 @@
 
             <h4>About Us</h4>
               <p>This project was made by <a href="mailto:michaelcahana2018@u.northwestern.edu">Michael Cahana</a>, <a href="mailto:joshuaklein2020@u.northwestern.edu">Josh Klein</a>, and <a href="maxinewhitely2020@u.northwestern.edu">Maxine Whitely</a>.
-                While we all contributed to all aspects of the project, Michael oversaw data scraping and processing, Josh oversaw model training, and Maxine oversaw website building. This project was completed in EECS 349: Machine Learning at Northwestern University. </p>
+                While we all contributed to all aspects of the project, Michael oversaw data scraping and processing, Josh oversaw model training, and Maxine oversaw website building. All the code used to create this project can be found on <a href='https://github.com/m-cahana/rapcast'> GitHub</a>. This project was completed in EECS 349: Machine Learning at Northwestern University. </p>
           </div>
 
           </section>
