minor text changes

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
           <a href="#abstract" class="mdl-layout__tab is-active">Abstract</a>
           <a href="#data" class="mdl-layout__tab">Data</a>
+          <a href="#playing" class="mdl-layout__tab">Playing With Data</a>
           <a href="#methods" class="mdl-layout__tab">Methods</a>
           <a href="#results" class="mdl-layout__tab">Results</a>
           <a href="#forward" class="mdl-layout__tab">Looking forward</a>
@@ -3206,7 +3207,7 @@
                 </div>
               </div>
               </section>
-              <p> We highly encourage reading up about some unigrams or bigrams that catch your eye. For instance, searching up Chicago's two most correlated unigrams, 3hunna and lamron, on <a href="https://www.urbandictionary.com">Urban Dictionary</a> will reveal that 3hunna is slang for the set of the Black Disciples gang located in the south side of Chicago, and lamron is slang for Normal, the street that runs through the neighborhoods of many Chicago rappers (notice that lamron is just normal spelled backwards). Searching up Philadelphia's bigram, state prop, will reveal that it refers to State Property, a division of Jay-Z's Rocafella label whose members are all originally from Philly. While not all of the most correlated unigrams and bigrams that we generated are as illustrative as these two, many of them can be interesting to look further into. </p>
+              <p> We highly encourage reading up about some unigrams or bigrams that catch your eye. For instance, searching for Chicago's two most correlated unigrams, 3hunna and lamron, on <a href="https://www.urbandictionary.com">Urban Dictionary</a> will reveal that 3hunna is slang for the set of the Black Disciples gang located in the south side of Chicago, and lamron is slang for Normal, the street that runs through the neighborhoods of many Chicago rappers (notice that lamron is just normal spelled backwards). Searching for Philadelphia's bigram, state prop, will reveal that it refers to State Property, a division of Jay-Z's Rocafella label whose members are all originally from Philly. While not all of the most correlated unigrams and bigrams that we generated are as illustrative as these two, many of them can be interesting to look further into. </p>
 
 
 
