remove center spacing

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div> -->
-        <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark" style="display: flex; justify-content: center;">
+        <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
           <a href="#abstract" class="mdl-layout__tab is-active">Abstract</a>
           <a href="#data" class="mdl-layout__tab">Data</a>
           <a href="#playing" class="mdl-layout__tab">Playing With Data</a>
