add era data note

--- a/index.html
+++ b/index.html
@@ -3235,7 +3235,7 @@
                 <img src="./site/jpg_figures/allregion_box.jpg" width="75%"/>
                 <div>
                   <p><em>All artists, classified by region:</em></p>
-                  <p>The highest prediction accuracy is reached using Linear SVC. Note that this is also the highest accuracy achieved over any other classification methods. This is due to the large number of artists with less possible classifications.</p>
+                  <p>The highest prediction accuracy is reached using Linear SVC. Note that this is also the highest accuracy achieved over any other classification method. The high accuracy levels for all models is due to the large number of artists with fewer possible classifications.</p>
                 </div>
               </div>
               <div id="sideby" style="display: flex; flex-direction: row; width: fit-content; align-items: flex-end;">
@@ -3259,6 +3259,7 @@
             <h4 id='forward'>Looking Forward</h4>
               <p>We think this project has room to improve, and in the future, would like to train our model with a larger dataset, which we think will improve its accuracy. This larger dataset would include new artists as well as more songs for each artist. </p>
               <p>We think it would also be interesting to experiment with Recurrent Neural Networks to build a language sampler model for a given artist based off their lyric corpus. Lastly, we think it would be worthwhile to run similar experiments on other genres of music to best contextualize our findings. </p>
+              <p>when we trained on data from one particular era our accuracies were higher, suggesting that rap slang evolves and that its easier to predict a rapper’s origins when training a model in a era of music. however we’d want a larger dataset in order to further test this hypothesis, and ensure higher accuracies weren’t a product of small test data. See our era by data <a href="https://github.com/m-cahana/rapcast/tree/master/figures" target="_blank">here</a></p>
 
 
             <h4 id='about'>About Us</h4>
