--- a/index.html
+++ b/index.html
@@ -3259,7 +3259,7 @@
             <h4 id='forward'>Looking Forward</h4>
               <p>We think this project has room to improve, and in the future, would like to train our model with a larger dataset, which we think will improve its accuracy. This larger dataset would include new artists as well as more songs for each artist. </p>
               <p>We think it would also be interesting to experiment with Recurrent Neural Networks to build a language sampler model for a given artist based off their lyric corpus. Lastly, we think it would be worthwhile to run similar experiments on other genres of music to best contextualize our findings. </p>
-              <p>Another thing of note: when we trained on data from one particular decade our accuracies were higher, suggesting that rap slang evolves and that it's easier to predict a rapper’s origins when training a model withinin a single era of music. Looking ahead, a larger dataset would allow us to further test this hypothesis, and ensure higher accuracies aren't a product of small test data. See our data by decade <a href="https://github.com/m-cahana/rapcast/tree/master/figures" target="_blank">here</a></p>
+              <p>Another thing of note: when we trained on data from one particular decade our accuracies were higher, suggesting that rap slang evolves and that it's easier to predict a rapper’s origins when training a model withinin a single era of music. Looking ahead, a larger dataset would allow us to further test this hypothesis, and ensure higher accuracies aren't a product of small test data. See our data by decade <a href="https://github.com/m-cahana/rapcast/tree/master/figures" target="_blank">here</a>.</p>
 
 
             <h4 id='about'>About Us</h4>
